Create Stellar Base Mng, add StellarTxManager with ready methods: createAccount, TrustAccount, CreateAndTrustAcoount. create StellarAccountManager with method getBalances
