# src/api/swagger.json
@@ -12,9 +12,6 @@
         },
         {
             "name": "User"
-        },
-        {
-            "name": "Pet"
         }
     ],
     "paths": {
@@ -259,248 +256,6 @@
                 }
             }
         },
-        "/pets": {
-            "get": {
-                "tags": [
-                    "Pet"
-                ],
-                "summary": "List all pets",
-                "description": "Returns all pets",
-                "operationId": "FindAllPets",
-                "security": [
-                    {
-                        "basicAuth": []
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean"
-                                        },
-                                        "message": {
-                                            "type": "string"
-                                        },
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/components/schemas/Pet"
-                                            }
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Pet"
-                ],
-                "summary": "Create new pet",
-                "description": "",
-                "operationId": "CreatePet",
-                "security": [
-                    {
-                        "basicAuth": []
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "created",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean"
-                                        },
-                                        "message": {
-                                            "type": "string"
-                                        },
-                                        "data": {
-                                            "$ref": "#/components/schemas/Pet"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/NewPet"
-                            }
-                        }
-                    },
-                    "description": "User object that needs to be added to the database",
-                    "required": true
-                }
-            }
-        },
-        "/pets/{id}": {
-            "get": {
-                "tags": [
-                    "Pet"
-                ],
-                "summary": "Get pet",
-                "description": "Returns the given pet",
-                "operationId": "FindPet",
-                "security": [
-                    {
-                        "basicAuth": []
-                    }
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of pet to return",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean"
-                                        },
-                                        "message": {
-                                            "type": "string"
-                                        },
-                                        "data": {
-                                            "$ref": "#/components/schemas/Pet"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Pet"
-                ],
-                "summary": "Update pet",
-                "description": "Updates the given pet",
-                "operationId": "UpdatePet",
-                "security": [
-                    {
-                        "basicAuth": []
-                    }
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of pet to update",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean"
-                                        },
-                                        "message": {
-                                            "type": "string"
-                                        },
-                                        "data": {
-                                            "$ref": "#/components/schemas/Pet"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/NewPet"
-                            }
-                        }
-                    },
-                    "description": "Pet object that needs to be added to the database",
-                    "required": true
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Pet"
-                ],
-                "summary": "Delete pet",
-                "description": "Removes the given pet",
-                "operationId": "DeletePet",
-                "security": [
-                    {
-                        "basicAuth": []
-                    }
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of pet to delete",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean"
-                                        },
-                                        "message": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
     },
     "components": {
         "requestBodies": {
@@ -543,22 +298,6 @@
                     }
                 }
             },
-            "NewPet": {
-                "type": "object",
-                "properties": {
-                    "name": {
-                        "type": "string"
-                    },
-                    "age": {
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    "userId": {
-                        "type": "string",
-                        "format": "uuid"
-                    }
-                }
-            },
             "User": {
                 "title": "User",
                 "type": "object",
@@ -588,38 +327,6 @@
                         "format": "date-time"
                     }
                 }
-            },
-            "Pet": {
-                "title": "Pet",
-                "allOf": [
-                    {
-                        "type": "object",
-                        "properties": {
-                            "id": {
-                                "type": "string",
-                                "format": "uuid"
-                            },
-                            "name": {
-                                "type": "string"
-                            },
-                            "age": {
-                                "type": "integer",
-                                "format": "int64"
-                            },
-                            "user": {
-                                "$ref": "#/components/schemas/User"
-                            },
-                            "updatedAt": {
-                                "type": "string",
-                                "format": "date-time"
-                            },
-                            "createdAt": {
-                                "type": "string",
-                                "format": "date-time"
-                            }
-                        }
-                    }
-                ]
             }
         }
     }
